--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "themes/ananke"]
-	path = themes/ananke
-	url = https://github.com/budparr/gohugo-theme-ananke.git
-[submodule "themes/themes/book"]
-	path = themes/themes/book
-	url = https://github.com/alex-shpak/hugo-book
+# [submodule "themes/ananke"]
+# 	path = themes/ananke
+# 	url = https://github.com/budparr/gohugo-theme-ananke.git
+# [submodule "themes/themes/book"]
+# 	path = themes/themes/book
+# 	url = https://github.com/alex-shpak/hugo-book
