--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://verbose-lamp.netlify.app"
 languageCode = "en-us"
 title = "Look & Point"
-theme = "zettels"
+theme = "hugo-book"
 
 # Needed for mermaid/katex shortcodes
 [markup]
